--- a/Engine KB-01/Engine KB-01/Engine KB-01.vcxproj
+++ b/Engine KB-01/Engine KB-01/Engine KB-01.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{AEFCCA9E-D3E8-407B-B4B1-F28439D15490}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>EngineKB01</RootNamespace>
+    <ProjectName>Minor Oculus Engine</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -87,7 +88,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="EngineMath.cpp" />
     <ClCompile Include="Entity.cpp" />
-    <ClCompile Include="Heightmap.cpp" />
+    <ClCompile Include="Ground.cpp" />
     <ClCompile Include="IndexBufferWrapper.cpp" />
     <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="InputHandlerInterface.cpp" />
@@ -123,7 +124,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="EngineMath.h" />
     <ClInclude Include="Entity.h" />
-    <ClInclude Include="Heightmap.h" />
+    <ClInclude Include="Ground.h" />
     <ClInclude Include="IndexBufferWrapper.h" />
     <ClInclude Include="InputHandler.h" />
     <ClInclude Include="InputHandlerInterface.h" />
