--- a/Engine KB-01/Engine KB-01/Engine KB-01.vcxproj
+++ b/Engine KB-01/Engine KB-01/Engine KB-01.vcxproj
@@ -91,7 +91,7 @@
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Ground.cpp" />
     <ClCompile Include="IndexBufferWrapper.cpp" />
-    <ClCompile Include="InputHandler.cpp" />
+    <ClCompile Include="DirectXInputHandler.cpp" />
     <ClCompile Include="InputHandlerInterface.cpp" />
     <ClCompile Include="Kernel.cpp" />
     <ClCompile Include="KeyboardListener.cpp" />
@@ -128,7 +128,7 @@
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Ground.h" />
     <ClInclude Include="IndexBufferWrapper.h" />
-    <ClInclude Include="InputHandler.h" />
+    <ClInclude Include="DirectXInputHandler.h" />
     <ClInclude Include="InputHandlerInterface.h" />
     <ClInclude Include="Kernel.h" />
     <ClInclude Include="KeyboardListener.h" />
